Initial adaption from pkg-sbbs gh-pages to sbbsdev gh-pages.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet alternative" type="text/css" href="/print.css" media="screen" title="Print Preview" />
     <link rel="stylesheet" type="text/css" href="/print.css" media="print" />
 
-    <title>jame.github.com/pkg-sbbs Index</title>
+    <title>jame.github.com/sbbsdev Index</title>
   </head>
 
   <body>
@@ -30,9 +30,9 @@
       </div>
 
       <div class="midHeader">
-        <h1 class="headerTitle" lang="en">pkg-sbbs</h1> 
-        <div class="headerSubTitle" title="jame/pkg-sbbs at GitHub">
-            Debian packaging for Synchronet BBS
+        <h1 class="headerTitle" lang="en">sbbsdev</h1> 
+        <div class="headerSubTitle" title="jame/sbbsdev at GitHub">
+            Synchronet BBS on Debian systems
         </div>
 
         <br class="doNotDisplay doNotPrint" />
@@ -65,8 +65,7 @@
 
         <div class="twoThirds noBorderOnLeft">
 
-        <p>This project is primarily about Debian packaging for Synchronet BBS,
-            which is a <a href="http://en.wikipedia.org/wiki/Bulletin_board_system">BBS</a>
+         <p>Synchronet is a <a href="http://en.wikipedia.org/wiki/Bulletin_board_system">BBS</a>
             system that can turn your personal computer into your own custom online service
             supporting multiple simultaneous users with hierarchical message and file areas,
             multi-user chat, and the ever-popular BBS door games. See the Synchronet BBS
@@ -74,23 +73,22 @@
             application itself.
         </p>
 
-        <p>The <a href="https://github.com/jame/pkg-sbbs/tree/debian-314">debian-314</a> branch in the repository
-            is used for the development of the debian packaging directory for the v3.14 versions of Synchronet BBS.
+        <p>This project enables the development of Synchronet BBS on Debian or
+             Debian derived systems like Ubuntu.  It enables the creation of
+             Synchronet BBS Debian packages and/or just compileing the sources
+             for local installation.
         </p>
 
-        <p>The <a href="https://github.com/jame/pkg-sbbs/tree/debian-315">debian-315</a> branch in the repository
-            is used for the development of the debian packaging directory for the v3.15 versions of Synchronet BBS.
-        </p>
-
-        <p>The <a href="https://github.com/jame/pkg-sbbs/tree/main-314">main-314</a> branch in the repository
-            contains the code for version v3.14 of the Synchronet BBS application, including that imported
-            from the v3.14 distribution archives.
-        </p>
-
-        <p>The <a href="https://github.com/jame/pkg-sbbs/tree/master">master</a> branch in the repository
-            contains code for the Synchronet BBS application itself, including that imported from the authors
-            CVS <a href="http://cvs.synchro.net/cgi-bin/viewcvs.cgi">Repository</a> and/or distribution archives.
-        </p>
+        <ul> Branches
+          <li>The <a href="https://github.com/jame/sbbsdev/tree/master">master</a>
+             branch in the repository contains the current/active versions of
+             the scripts and directories.
+          </li>
+          <li>The <a href="https://github.com/jame/sbbsdev/tree/develop">develop</a>
+             branch in the repository is used for developing new versions of
+             the scripts and directories.
+          </li>
+        </ul>
 
         </div>
       </div>
@@ -99,12 +97,10 @@
 
           <ul type="DISC">Quicklinks
 
-            <li><a href="http://github.com/jame/pkg-sbbs">jame/pkg-sbbs</a></li>
-            <li><a href="https://github.com/jame/pkg-sbbs/issues">jame/pkg-sbbs issues</a></li>
-            <li><a href="https://github.com/jame/pkg-sbbs/commits/master">jame/pkg-sbbs commits</a></li>
-
-            <li><a href="https://github.com/jame/pkg-sbbs/commits/debian-314">debian-314</a> commits for SBBS v3.14</li>
-            <li><a href="https://github.com/jame/pkg-sbbs/commits/debian-315">debian-315</a> commits for SBBS v3.15</li>
+            <li><a href="http://github.com/jame/sbbsdev">jame/sbbsdev</a></li>
+            <li><a href="https://github.com/jame/sbbsdev/issues">jame/sbbsdev issues</a></li>
+            <li><a href="https://github.com/jame/sbbsdev/commits/master">master branch</a> commits</li>
+            <li><a href="https://github.com/jame/sbbsdev/commits/develop">develop branch</a> commits</li>
 
             <li>Synchronet <a href="http://wiki.synchro.net/">Wiki</a></li>
 
