Rewrite main paragraph of index.html

--- a/index.html
+++ b/index.html
@@ -65,18 +65,12 @@
 
         <div class="twoThirds noBorderOnLeft">
 
-         <p>Synchronet is a <a href="http://en.wikipedia.org/wiki/Bulletin_board_system">BBS</a>
-            system that can turn your personal computer into your own custom online service
-            supporting multiple simultaneous users with hierarchical message and file areas,
-            multi-user chat, and the ever-popular BBS door games. See the Synchronet BBS
-            <a href="http://www.synchro.net/">home page</a> for more details regarding the
-            application itself.
-        </p>
-
-        <p>This project enables the development of Synchronet BBS on Debian or
-             Debian derived systems like Ubuntu.  It enables the creation of
-             Synchronet BBS Debian packages and/or just compileing the sources
-             for local installation.
+         <p><a href="http://www.synchro.net/">Synchronet</a> is a
+            <a href="http://en.wikipedia.org/wiki/Bulletin_board_system">BBS</a>
+            system that supports multiple simultaneous users with hierarchical message and file areas,
+            multi-user chat, and BBS door games. This project enables the development of it on Debian or
+            Debian derived systems like Ubuntu, for the creation of Synchronet BBS Debian packages
+            and/or just compileing the source for local installation.
         </p>
 
         <ul> Branches
