Initial update of index.html after moving to ftnapps/sbbsdev.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet alternative" type="text/css" href="/print.css" media="screen" title="Print Preview" />
     <link rel="stylesheet" type="text/css" href="/print.css" media="print" />
 
-    <title>jame.github.com/sbbsdev Index</title>
+    <title>ftnapps.github.com/sbbsdev Index</title>
   </head>
 
   <body>
@@ -31,7 +31,7 @@
 
       <div class="midHeader">
         <h1 class="headerTitle" lang="en">sbbsdev</h1> 
-        <div class="headerSubTitle" title="jame/sbbsdev at GitHub">
+        <div class="headerSubTitle" title="ftnapps/sbbsdev at GitHub">
             Synchronet BBS on Debian systems
         </div>
 
@@ -74,11 +74,11 @@
         </p>
 
         <ul> Branches
-          <li>The <a href="https://github.com/jame/sbbsdev/tree/master">master</a>
+          <li>The <a href="https://github.com/ftnapps/sbbsdev/tree/master">master</a>
              branch in the repository contains the current/active versions of
              the scripts and directories.
           </li>
-          <li>The <a href="https://github.com/jame/sbbsdev/tree/develop">develop</a>
+          <li>The <a href="https://github.com/ftnapps/sbbsdev/tree/develop">develop</a>
              branch in the repository is used for developing new versions of
              the scripts and directories.
           </li>
@@ -91,10 +91,10 @@
 
           <ul type="DISC">Quicklinks
 
-            <li><a href="http://github.com/jame/sbbsdev">jame/sbbsdev</a></li>
-            <li><a href="https://github.com/jame/sbbsdev/issues">jame/sbbsdev issues</a></li>
-            <li><a href="https://github.com/jame/sbbsdev/commits/master">master branch</a> commits</li>
-            <li><a href="https://github.com/jame/sbbsdev/commits/develop">develop branch</a> commits</li>
+            <li><a href="http://github.com/ftnapps/sbbsdev">ftnapps/sbbsdev</a></li>
+            <li><a href="https://github.com/ftnapps/sbbsdev/issues">ftnapps/sbbsdev issues</a></li>
+            <li><a href="https://github.com/ftnapps/sbbsdev/commits/master">master branch</a> commits</li>
+            <li><a href="https://github.com/ftnapps/sbbsdev/commits/develop">develop branch</a> commits</li>
 
             <li>Synchronet <a href="http://wiki.synchro.net/">Wiki</a></li>
 
